; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_aacenc_pred.c_flt16_even.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_aacenc_pred.c_flt16_even.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.av_intfloat32 = type { float }

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (float)* @flt16_even to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @flt16_even(float %0) #0 {
  %2 = alloca float, align 4
  %3 = alloca %union.av_intfloat32, align 4
  store float %0, float* %2, align 4
  %4 = load float, float* %2, align 4
  %5 = bitcast %union.av_intfloat32* %3 to float*
  store float %4, float* %5, align 4
  %6 = bitcast %union.av_intfloat32* %3 to i32*
  %7 = load i32, i32* %6, align 4
  %8 = add i32 %7, 32767
  %9 = bitcast %union.av_intfloat32* %3 to i32*
  %10 = load i32, i32* %9, align 4
  %11 = and i32 %10, 1
  %12 = add i32 %8, %11
  %13 = and i32 %12, -65536
  %14 = bitcast %union.av_intfloat32* %3 to i32*
  store i32 %13, i32* %14, align 4
  %15 = bitcast %union.av_intfloat32* %3 to float*
  %16 = load float, float* %15, align 4
  ret float %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
